--- a/main.css
+++ b/main.css
@@ -1,14 +1,29 @@
 body {background-color: pink; }
-h1 {color:aqua; text-align:center;}
+h1 {
+    color:aqua; text-align:center;
+    font-family: 'Rubik Bubbles', Arial, Helvetica, sans-serif; font-size: 70px;
+}
 body {font-family: sans-serif; font-size:18px;}
+/* this is my main styling */
 #table { border: 6px dotted plum}
 #images {border: 6px dotted plum}
 #footer {border: 6px dotted plum}
 body {text-align: center;}
-/* Hi There! */
 img {max-width: 80%; max-height: 80%;} 
-/* test */
 #txt-counter.odd {color:blueviolet}
 li:nth-child(even) {
     color: blueviolet;
+}
+/* this is my smaller screen size code */
+@media only screen and (max-width: 600px){
+}
+div.ex1 {
+    width: 300px;
+    margin: auto;
+    border: 2px solid black;
+}
+div.ex2 {
+    max-width: 300px;
+    margin: auto;
+    border: 2px solid black;
 }
